--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --base-href=https://mantismirror.com/ --ssr=false",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:angular-bootstrap-starter": "node dist/angular-bootstrap-starter/server/server.mjs"
+    "serve:ssr:angular-bootstrap-starter": "node dist/angular-bootstrap-starter/server/server.mjs",
+    "deploy": "npx angular-cli-ghpages --dir=dist/angular-bootstrap-starter/browser"
   },
   "private": true,
   "dependencies": {
