Update build script url

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --base-href=https://mantismirror.com/ --ssr=false",
+    "build": "ng build --base-href=https://paragonelectric.com/ --ssr=false",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:angular-bootstrap-starter": "node dist/angular-bootstrap-starter/server/server.mjs",
